--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "chart.js": "^3.7.0",
+    "faker": "^5.5.3",
     "next": "9.4.0",
     "react": "16.13.1",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "16.13.1",
     "reactstrap": "^9.0.1"
   },
