--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "availity-reactstrap-validation": "^2.7.1",
     "chart.js": "^3.7.0",
     "faker": "^5.5.3",
     "next": "9.4.0",
